// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectArrow Should render correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="w-3 h-3 fill-[var(--color-primary)]"
    data-testid="select-arrow-svg"
    viewBox="0 0 10 10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0 L10 0 L5 7 z"
      data-testid="select-arrow-path"
    />
  </svg>
</DocumentFragment>
`;

exports[`SelectArrow Should render correctly and match snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="w-3 h-3 fill-[var(--color-primary)]"
    data-testid="select-arrow-svg"
    viewBox="0 0 10 10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0 L10 0 L5 7 z"
    />
  </svg>
</DocumentFragment>
`;
